terraform/eks-sd-cluster/deployment-controller.yaml
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: img2img
#   # namespace: stable-diffusion
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: img2img
#   template:
#     metadata:
#       labels:
#         app: img2img
#     spec:
#       serviceAccountName: img2img-sa
#       terminationGracePeriodSeconds: 0
#       containers:
#         - name: img2img
#           image: 733851053666.dkr.ecr.ap-northeast-1.amazonaws.com/aigc-service-image:latest
#           resources:
#             requests:
#               cpu: 1
#           env:
#           - name: SQSQUEUEURL 
#             value: "https://sqs.ap-northeast-1.amazonaws.com/733851053666/discord-sd-prod.fifo"
#           - name: REGION
#             value: "ap-northeast-1"
#           - name: ENDPOINT
#             value: "http://stable-diffusion.svc.cluster.local"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd-controller
spec:
  replicas: 5
  selector:
    matchLabels:
      app: sd-controller
  template:
    metadata:
      labels:
        app: sd-controller
    spec:
      serviceAccountName: img2img
      nodeSelector:
        "eks/node-type": "cpu"
        "karpenter.sh/provisioner-name": "public-karpenter"
      tolerations:
      - key: sd/service
        operator: Exists
        effect: NoSchedule
      terminationGracePeriodSeconds: 0
      containers:
        - name: sd-controller
          image: 733851053666.dkr.ecr.ap-northeast-1.amazonaws.com/aigc-service-image:latest
          resources:
            requests:
              cpu: 1
