terraform/eks-sd-cluster/efs-load-model.yaml
apiVersion: v1
kind: Pod
metadata:
  name: efs-load-model
  #namespace: stable-diffusion
spec:
  containers:
  - name: nginx
    image: busybox:1.35
    command: ['sh', '-c', "if [ ! -d '/app/stable-diffusion-webui/models/Stable-diffusion' ]; then  mkdir /app/stable-diffusion-webui/models/Stable-diffusion;fi;if [ ! -d '/app/stable-diffusion-webui/models/ControlNet' ]; then  mkdir /app/stable-diffusion-webui/models/ControlNet;fi;model_md5sum=$(md5sum /app/stable-diffusion-webui/models/Stable-diffusion/rpg-v4.safetensors|awk '{print $1}' );if [ $model_md5sum == '2f8e25d8f763fb505441e30a5e89480f' ]; then echo 1.model rpg-v4.safetensors already  [...]
    volumeMounts:
      - mountPath: /app/stable-diffusion-webui/models
        name: stable-diffusion-model-store
  volumes:
    - name: stable-diffusion-model-store
      persistentVolumeClaim:
        claimName: stable-diffusion-datadir
