terraform/eks-sd-cluster/deployment-sd.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: stable-diffusion
  # namespace: stable-diffusion

spec:
  replicas: 1
  selector:
     matchLabels:
      app.kubernetes.io/instance: stable-diffusion
      app.kubernetes.io/name: stable-diffusion
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: stable-diffusion
        app.kubernetes.io/name: stable-diffusion
    spec:
      nodeSelector:
        eks/node-type: gpu
        karpenter.sh/provisioner-name: "gpu-bottlerocket"
      tolerations:
      - key: nvidia.com/gpu
        operator: Exists
        effect: NoSchedule
      containers:
      - name: stable-diffusion-webui
        image: public.ecr.aws/r7r9s7c1/sd-game-activity:0.23-committed
        resources:
          limits:
            nvidia.com/gpu: 1
        # env:
        #   - name: SQSQUEUEURL 
        #     value: "https://sqs.us-west-2.amazonaws.com/970662323538/discord-diffusion-prod.fifo"
        #   - name: REGION
        #     value: "us-west-2"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /app/datadir
          name: stable-diffusion-model-store
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: stable-diffusion-model-store
        persistentVolumeClaim:
          claimName: stable-diffusion-datadir

---
apiVersion: v1
kind: Service
metadata:
  # namespace: stable-diffusion
  name: stable-diffusion
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
     app.kubernetes.io/instance: stable-diffusion
     app.kubernetes.io/name: stable-diffusion
